--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://amir3x0.github.io/Cloud-Project-Nvidia/index.html/style.css"
+      href="https://amir3x0.github.io/Cloud-Project-Nvidia/style.css"
     />
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
