--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://amir3x0.github.io/Cloud-Project-Nvidia/style.css"
-    />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
     <script>
@@ -153,6 +150,6 @@
       </div>
     </div>
 
-    <script src="https://amir3x0.github.io/Cloud-Project-Nvidia/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
