--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         measurementId: "G-HLSHVVW5K1",
       };
       firebase.initializeApp(firebaseConfig);
-      const database = firebase.database();
+      const db = firebase.database();
     </script>
     <style></style>
   </head>
@@ -155,5 +155,6 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="./frontend/api.js"></script>
   </body>
 </html>
