--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </div>
     </div>
 
-    <script src="./script.js" type="module"></script>
+    <script src="./script.js"></script>
     <script src="./frontend/api.js"></script>
   </body>
 </html>
