show search from DB on html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <button
           id="searchButton"
-          onclick="toggleLinksPerPageVisibility(); search()"
+          onclick="toggleLinksPerPageVisibility();"
           class="search-button"
         >
           Search
