--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <!-- Dropdown for selecting number of links per page -->
       <div id="linksPerPageContainer">
         <span id="linksPerPageText">Links per page:</span>
-        <select id="linksPerPage" onchange="search2()">
+        <select id="linksPerPage" onchange="search()">
           <option value="5">5</option>
           <option value="10">10</option>
           <option value="20">20</option>
