--- a/index.html
+++ b/index.html
@@ -155,6 +155,6 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="./frontend/api.js"></script>
+    <!-- <script src="./frontend/api.js"></script> -->
   </body>
 </html>
