remove fake data

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <span class="theme-toggle" onclick="toggleTheme()">Toggle Theme</span>
       </div>
     </div>
+    <div class="container">
+      <img class="top-image" src="frontend/salamandra.png" alt="Top Image">
+    </div>
 
     <div id="searchPage" class="search-container active">
       <input type="text" id="searchQuery" class="search-box"
