--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
     </div>
     <!-- top image (salamandra) -->
     <div class="container">
-        <img class="top-image" src="frontend/salamandra.png" alt="Top Image">
-        <!-- Other content goes here -->
+        <img class="top-image" src="/frontend/salamandra.png" alt="Top Image">
     </div>
 
     <div id="searchPage" class="search-container active">
