logo online fetch

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body class="light-theme">
 
     <div id="content-container">
-        <img class="top-image" id="image" src="frontend/salamandra.png" alt="Top Image">
+        <img class="top-image" id="image" src="https://i.ibb.co/NS2PTxd/salamandra.png" alt="Top Image">
         <div class="text-logo" id="text-logo" onclick="switchPage('searchPage')">Salamandra</div>
     </div>
 
