--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div id="content-container">
         <img class="top-image" id="image" src="https://i.ibb.co/NS2PTxd/salamandra.png" alt="Top Image">
-        <div class="text-logo" id="text-logo" onclick="switchPage('searchPage')">Salamandra</div>
+        <div class="text-logo" align="center" id="text-logo" onclick="switchPage('searchPage')">Salamandra</div>
     </div>
 
   <div class="wrapper">
