changing static refrences

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="{{ url_for('static', filename='script.js') }}"></script>
   <!-- <script src="./frontend/api.js"></script> -->
 </body>
 
