--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <span>Nvidia Search Engine</span>
       </div>
       <div class="nav-links">
+        <a onclick="chat()">Chat</a>
         <a onclick="switchPage('searchPage')">Search</a>
         <div class="dropdown">
           <span class="dropbtn">Index</span>
