--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <span>Nvidia Search Engine</span>
       </div>
       <div class="nav-links">
-        <a onclick="chat()">Chat</a>
+        <a onclick="switchPage('chatPage')">Chat</a>
         <a onclick="switchPage('searchPage')">Search</a>
         <div class="dropdown">
           <span class="dropbtn">Index</span>
@@ -62,7 +62,14 @@
         <img class="top-image" src="/frontend/salamandra.png" alt="Top Image">
     </div>
 
+    <div id="chatPage" class="search-container active">
+      <input type="text" id="chatMsgText" class="search-box"
+        placeholder="Type Your message to the chatbot" />
 
+      <button id="sendChatMsgButton" onclick="chat(True, Hi);" class="search-button">
+        Send Message
+      </button>
+    </div>
 
     <div id="searchPage" class="search-container active">
       <input type="text" id="searchQuery" class="search-box"
