--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <input type="text" id="chatMsgText" class="search-box"
         placeholder="Type Your message to the chatbot" />
 
-      <button id="sendChatMsgButton" onclick="chat(True, Hi)" class="search-button">
+      <button id="sendChatMsgButton" onclick="chat()" class="search-button">
         Send Message
       </button>
       <a id="chatReturn"></a>
