--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               </div>
               <div class="chatbox__content--header">
                   <h4 class="chatbox__heading--header">Chat support</h4>
-                  <p class="chatbox__description--header">Hi. My name is NvidiaBot. How can I help you?</p>
+                  <p class="chatbox__description--header">Hi. My name is NvidiaBot. Please write a topic you would like to know more about</p>
               </div>
           </div>
           <div class="chatbox__messages">
