--- a/index.html
+++ b/index.html
@@ -96,13 +96,14 @@
             <input type="text" id="editTerm" class="input-field" placeholder="Existing term" />
             <button class="btn" onclick="fetchTermDetails()">Fetch Term Details</button>
             <div id="editDetails" style="display:none;">
-                <label for="docIdsContainer" class="input-label">DocIDs:</label>
+                <label for="docIdsContainer" class="input-label">DocIDs: </label>
+                <label id="test">0</label>
                 <div id="docIdsContainer" class="doc-ids-container"></div>
                 <!-- Updated section for adding a new DocID -->
                 <input type="text" id="newDocTitle" class="input-field" placeholder="Enter new DocID title" />
                 <input type="text" id="newDocUrl" class="input-field" placeholder="Enter new DocID URL" />
                 <input type="number" id="newDocOccurrence" class="input-field" placeholder="Enter new DocID occurrence number" />
-                <button id="addDocIdButton" class="btn">+ Add DocID</button>
+                <button id="addDocIdButton" class="btn" onclick="addNewDocId()">+ Add DocID</button>
             </div>
         </div>
         <h2 id="editMessage"></h2>
