--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
             <input type="text" id="editTerm" class="input-field" placeholder="Existing term" />
             <button class="btn" onclick="fetchTermDetails()">Fetch Term Details</button>
             <div id="editDetails" style="display:none;">
-                <label for="docIdsContainer" class="input-label">DocIDs: </label>
-                <label id="test">0</label>
                 <div id="docIdsContainer" class="doc-ids-container"></div>
                 <!-- Updated section for adding a new DocID -->
+                <h2>Add New DocID</h2>
                 <input type="text" id="newDocTitle" class="input-field" placeholder="Enter new DocID title" />
                 <input type="text" id="newDocUrl" class="input-field" placeholder="Enter new DocID URL" />
                 <input type="number" id="newDocOccurrence" class="input-field" placeholder="Enter new DocID occurrence number" />
