minor additions and changes

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </button>
       </div>
     </div>
-
+    <!-- chatbox -->
     <div class="chatbox">
       <div class="chatbox__support">
           <div class="chatbox__header">
@@ -186,14 +186,13 @@
     window.addEventListener("beforeunload", (event) => {
 
 
-    // The tab is not hidden, proceed with your code to remove items from local storage
+    
     localStorage.removeItem("username");
     localStorage.removeItem("admin");
     });
   </script>
 
   <script src="script.js"></script>
-  <!-- <script src="./frontend/api.js"></script> -->
 </body>
 
 </html>
