fixing some styling

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="logo">
         <i class="fas fa-microchip"></i>
         <span>Nvidia Search Engine</span>
-        <span id="welcomeMsg" style="color: #00ff00; margin-left: 20px;"></span>
+        <span id="welcomeMsg" style="color: #76b900; margin-left: 20px;"></span>
 
       </div>
       <div class="nav-links">
